# cudf-benchmark

./: .gitignore  README.md  analysis.ipynb  benchmark.py  benchmark_results.csv  benchmark_results_20250209.csv  benchmark_results_20250216.csv  benchmark_results_cudf.csv  benchmark_results_goodreads_20250216.csv  benchmark_results_pandas.csv  benchmark_whole_database.py  hello.py  pyproject.toml  run_pd.sh
