[project]
name = "cudf-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "cudf-cu12",
    "plotly>=6.0.0",
    "nbformat>=5.10.4",
    "polars>=1.22.0",
    "pyspark==3.5.0",
]

[tool.uv]
extra-index-url = ["https://pypi.anaconda.org/rapidsai-wheels-nightly/simple"]
index-strategy = "unsafe-best-match"
prerelease = "allow"
